<resources>
    <string name="app_name">Vaani Music Player</string>
    <string name="HomeTab1">Tracks</string>
    <string name="HomeTab2">Albums</string>
    <string name="HomeTab3">Artists</string>
    <string name="HomeTab4">Genres</string>
    <string name="HomeTab5">Playlist</string>
    <string name="HomeTab6">Folders</string>
    <string name="SearchButton">Search</string>

    <string name="Nav1">Library</string>
    <string name="Nav2">Now Playing</string>
    <string name="Nav3">Current Playlist</string>
    <string name="Nav4">Playlists</string>
    <string name="Nav5">Mp3 Cutter</string>
    <string name="Nav6">Sleep Timer</string>
    <string name="Nav7">Equalizer</string>
    <string name="Nav8">Settings</string>
    <string name="Nav9">Transfer</string>
    <string name="Nav10">Share App</string>
    <string name="Nav11">Explore App</string>
    <string name="Nav12">Send Feedback</string>
    <string name="Nav13">About Us</string>
    <string name="search_hint">Enter Song Name… </string>

    <string name="permission_error_message">Permission Necessary to Access Songs !!</string>
    <string name="permission_enabling_message">ENABLE</string>
    <string name="error_dialog_title">Need Storage Permission</string>
    <string name="error_msg_dialog">Storage Permission necessary. Exiting Application</string>
    <string name="dialog_positive_button">OK</string>

    <string name="home_activity_name">Library</string>
    <string name="middle_activity_name">Albums</string>

    <string name="bg_img_set">Change the Background Image</string>
    <string-array name="HomeScreen">
        <item>@string/HomeTab1</item>
        <item>@string/HomeTab2</item>
        <item>@string/HomeTab3</item>
        <item>@string/HomeTab4</item>
        <item>@string/HomeTab5</item>
        <item>@string/HomeTab6</item>
    </string-array>

    <integer-array name="HomeTabIcon">
        <item>@drawable/ic_audiotrack_black_24dp</item>
        <item>@drawable/ic_album_black_24dp</item>
        <item>@drawable/ic_person_black_24dp</item>
        <item>@drawable/ic_queue_music_black_24dp</item>
        <item>@drawable/ic_folder_black_24dp</item>
    </integer-array>
</resources>
